--- a/signin.html
+++ b/signin.html
@@ -99,7 +99,7 @@
             margin: 80px auto 0;
             /* Adjusted margin for the form */
             padding: 20px;
-            background-color: transparent;
+            background-color: white;
             backdrop-filter: blur(20);
             /* White background */
             border: 2px solid #87CEEB;
