--- a/signin.html
+++ b/signin.html
@@ -200,7 +200,7 @@
    
 
         <div class="signin-link">
-            Don't have an account? <a href="signup.html">Sign Up</a><br>
+            Don't have an account? <a href="index.html">Sign Up</a><br>
             <a href="#forgotPassword">Forgot password?</a>
         </div>
     </form>
