--- a/signin.html
+++ b/signin.html
@@ -177,10 +177,10 @@
         }
       @media  screen and (max-width:700px) {
           form{
-                top: 100px;
+                top: 80px;
             max-width: 400px;
             width: 100%;
-            margin: 80px auto 0;
+            margin: 30px 30px 30px 30px;
             /* Adjusted margin for the form */
             padding: 20px;
             background-color: white;
@@ -197,6 +197,24 @@
             /* Black text color */
             position: relative;
         }
+                .bg-pic {
+            top: 0px;
+            background-image: url('https://thumbs.dreamstime.com/b/food-donation-to-help-people-hunger-relief-hands-poor-receive-food-donor-s-share-food-donation-to-help-people-197029422.jpg');
+            height: 100%;
+            /* Adjust the height according to your requirement */
+            width: 100%;
+            /* Adjust the width according to your requirement */
+            background-repeat: no-repeat;
+            /* Prevents the background image from repeating */
+            background-size: cover;
+            position: absolute;
+            background-position: center center;
+            filter: blur(2px);
+            left: 0;
+            right: 0;
+            /* Resizes the background image to cover the entire element */
+        }
+
           }
     
 
